--- a/vibm/nomads/nomads/gui/css/dashboard.css
+++ b/vibm/nomads/nomads/gui/css/dashboard.css
@@ -105,12 +105,6 @@ border-color: transparent;
 box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
 
-.header-availability {
-    color: white;
-    background-color: green;
-    padding-left: 1em;
-}
-
 .aClass {
     width: 140px;
     height: 40px;
@@ -146,6 +140,89 @@ box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
     background-color: grey;
 }
 
+.header-availability {
+    height: 1.8em;
+    color: white;
+    background-color: green;
+    padding-top: 6px;
+    padding-left: 3px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    margin: 0%;
+}
+
+.my-table {
+    margin: 0%;
+    /*height: 8em;*/ 
+    background-color: lightcyan;
+}
+
 .happy {
-    line-height: 2px;
+    height: 2.0em;
+    background-color: coral;
+    color: black;
+    font-size: 1.2em;
+    font-weight: normal;
+    padding-top: 5px;
+    padding-left: 5px;
+}
+
+.wall {
+    background-color: grey;
+    padding-left: 10%;
+    overflow: hidden;
+}
+
+.cip {
+    font-size: 1.6em;
+    padding-left: 3em;
+    display: inline;
+}
+
+.button-ready {
+    border: 3px solid #007bff;
+    padding-right: 5px;
+    padding-top: 15px;
+    padding-left: 10px;
+    margin-left: 15px;
+    line-height: 20px;
+    font-size: 1.4em;
+    font-weight: bolder;
+    background-color: crimson;
+    color: whitesmoke;
+    height: 2.8em;
+}
+
+.button-wait {
+    color: yellow;
+}
+
+.robot-select-div {
+    font-size: 1.6em;
+}
+
+.robot-select-label {
+    color: black;
+    margin-top: 10px;
+    padding-right: 25px;
+    padding-left: 5px;
+    background-color: cadetblue;
+    margin-bottom: 2px;
+    font-weight: bold;
+}
+
+.robot-select {
+    width: 80px;
+    padding-top: 10px;
+    margin-bottom: 2px;
+}
+
+.small-border {
+    background-color: gray;
+    height: 0.6em;
+}
+
+.ping-response {
+    background: green;
+    font-size: 1.8em;
 }
