--- a/vibm/nomads/nomads/gui/css/dashboard.css
+++ b/vibm/nomads/nomads/gui/css/dashboard.css
@@ -81,15 +81,15 @@ padding-top: 48px; /* Space for fixed navbar */
 */
 
 .navbar-brand {
-padding-top: .75rem;
-padding-bottom: .75rem;
+/*padding-top: .75rem;
+padding-bottom: .75rem;*/
 font-size: 1rem;
 background-color: rgba(0, 0, 0, .25);
 box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
 
 .navbar .form-control {
-padding: .75rem 1rem;
+/*padding: .75rem 1rem;*/
 border-width: 0;
 border-radius: 0;
 }
@@ -203,18 +203,18 @@ box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 
 .robot-select-label {
     color: black;
-    margin-top: 10px;
+    /*margin-top: 10px;
     padding-right: 25px;
     padding-left: 5px;
     background-color: cadetblue;
     margin-bottom: 2px;
-    font-weight: bold;
+    font-weight: bold;*/
 }
 
 .robot-select {
-    width: 80px;
+    /*width: 80px;
     padding-top: 10px;
-    margin-bottom: 2px;
+    margin-bottom: 2px;*/
 }
 
 .small-border {
@@ -225,4 +225,8 @@ box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 .ping-response {
     background: green;
     font-size: 1.8em;
+}
+
+.badge {
+    color: green;
 }
