--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -30,8 +30,8 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Reports<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">External Lighthouse</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
               <a class="dropdown-item" href="#">Ping IP</a>
               <a class="dropdown-item" href="#">Scan Ports</a>
