--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -30,6 +30,7 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Reports<span class="sr-only">(current)</span></a>
           </li>
+          <!-- EXTERNAL MONITORING -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
@@ -37,14 +38,21 @@
               <a class="dropdown-item" href="#">Scan Ports</a>
             </div>
           </li>
+          <!-- End of EXTERNAL -->
+
           <li class="nav-item">
-            <a class="nav-link" href="#">Internal Patrol</a>
+            <a class="nav-link" href="#">Internal</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Charts</a>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
+              <a class="dropdown-item" href="#">Columns</a>
               <a class="dropdown-item" href="#">Bars</a>
-              <a class="dropdown-item" href="#">Scan Ports</a>
+              <a class="dropdown-item" href="#">Scatter</a>
+              <a class="dropdown-item" href="#">Pie</a>
+              <a class="dropdown-item" href="#">Donut</a>
+              <a class="dropdown-item" href="#">Timeline</a>
             </div>
  
           </li>
