--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -44,6 +44,8 @@
             <a class="nav-link" href="#">Internal</a>
           </li>
 
+          
+          <!-- CHART Type .. -->  
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Charts</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
@@ -54,15 +56,33 @@
               <a class="dropdown-item" href="#">Donut</a>
               <a class="dropdown-item" href="#">Timeline</a>
             </div>
- 
           </li>
+          <!-- End of CHARTS -->
+
           <li class="nav-item">
             <a class="nav-link" href="#">Dashboards</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Maps</a>
           </li>
-            
+          
+          <!-- TIME Range -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Time-Range</a>
+            <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
+              <a class="dropdown-item" href="#">15 Mins</a>
+              <a class="dropdown-item" href="#">Half Hour</a>
+              <a class="dropdown-item" href="#">One(1) Hour</a>
+              <a class="dropdown-item" href="#">Three(3) Hours</a>
+              <a class="dropdown-item" href="#">Six(6) Hours</a>
+              <a class="dropdown-item" href="#">One Day</a>
+              <a class="dropdown-item" href="#">Five Days</a>
+              <a class="dropdown-item" href="#">Ten Days</a>
+              <a class="dropdown-item" href="#">Last Month</a>
+            </div>
+          </li>
+          <!-- End of TIMEs -->
+
           <li class="nav-item dropdown"> <!-- d-sm-block d-md-none"-->
             <a class="nav-link dropdown-toggle" href="#" id="smallerscreenmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               More ...
