--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -105,25 +105,14 @@
       </div>
     </nav>
 
-    <div class="row" id="body-row">    
-    <div class="col">
-      <h3><span class="badge badge-pill badge-primary text-white">Server-URL</span></h3>
+    <main role="main">
 
-      <div class="form-inline row col-md-12 col-lg-7">
-        <select class="form-control form-control-sm col-md-4 col-lg-4" id="robot-ip">
-          <option value="local">127.0.0.1</option>
-          <option value="vlab1">vlab1.dyndns.org</option>
-          <option value="vlab2">vlab2.dyndns.org</option>
-          <option value="vlab3" selected="selected">vlab3.dyndns.org</option>
-          <option value="other">Other</option>
-        </select>
-  
-        <h4><label class="text-warning ml-2">If other:</label></h4>
-  
-        <input id = "other-ip" type="text" class="form-control form-control-sm col-md-4 col-lg-3 ml-2" placeholder="Server-IP" aria-label="server ip" aria-describedby="basic-addon2">            
+      <!-- Main application header for Data-Collection from Server/ Database -->
+      <div class="row" id="body-row">    
+        <div class="col">
+          <h3><span class="badge badge-pill badge-primary text-white">Server-URL</span></h3>
+        </div>
       </div>
-    </div> <!-- COL-->
-  </div> <!-- ROW -->
     
   <div class="row">
       <div role="main" class="col-md-12 ml-sm-auto col-lg-12 px-4">
