--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -108,9 +108,9 @@
     <main role="main">
 
       <!-- Main application header for Data-Collection from Server/ Database -->
-      <div class="row" id="body-row">    
-        <div class="col">
-          <h3><span class="badge badge-pill badge-primary text-white">Server-URL</span></h3>
+      <div class="jumbotron">    
+        <div class="container">
+          <h1 class="display-3">Hello, Performance Data</h1>
         </div>
       </div>
     
