--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -111,6 +111,7 @@
       <div class="jumbotron">    
         <div class="container">
           <h1 class="display-3">Hello, Performance Data</h1>
+          <p>This is the section for collecting all available performance data from server datastore.When you press the large blue button a request is commited and the server responses with time-series that are client rendered.</p>
         </div>
       </div>
     
