--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -112,7 +112,7 @@
         <div class="container">
           <h1 class="display-3 text-info">Hello, Performance Data</h1>
           <p>This is the section for collecting all available performance data from server datastore.When you press the large blue button a request is commited and the server responses with time-series that are client rendered.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Get Data &raquo;</a></p>
+          <p><a class="btn btn-warning btn-lg" href="#" role="button">Get Data &raquo;</a></p>
         </div>
       </div>
     
