--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -112,7 +112,7 @@
         <div class="container">
           <h1 class="display-3 text-info">Hello, Performance Data</h1>
           <p>This is the section for collecting all available performance data from server datastore.When you press the large blue button a request is commited and the server responses with time-series that are client rendered.</p>
-          <p><a class="btn btn-warning btn-lg" href="#" role="button">Get Data &raquo;</a></p>
+          <p><a class="btn btn-warning btn-lg" href="#" role="button-get-data">Get Data &raquo;</a></p>
         </div>
       </div>
     
@@ -199,6 +199,7 @@
   <script type="text/javascript" src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/ports_services_availability_monitor.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/scan_vlab_open_ports.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/charts_support.js') }}"></script>
 
 </body>
 </html>
