--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -199,7 +199,7 @@
   <script type="text/javascript" src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/ports_services_availability_monitor.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/scan_vlab_open_ports.js') }}"></script>
-  <script type="text/javascript" src="{{ url_for('static', filename='js/charts_support.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename='js/charts_collection.js') }}"></script>
 
 </body>
 </html>
