--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#">Reports<span class="sr-only">(current)</span></a>
           </li>
           <!-- EXTERNAL MONITORING -->
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown" role="external-list">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
               <a class="dropdown-item" href="#">Ping IP</a>
