--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -33,7 +33,7 @@
           <!-- EXTERNAL MONITORING -->
           <li class="nav-item dropdown" role="external-list">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
-            <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
+            <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu" role="external-menu">
               <a class="dropdown-item" href="#">Ping IP</a>
               <a class="dropdown-item" href="#">Scan Ports</a>
             </div>
