--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -34,7 +34,7 @@
           <li class="nav-item dropdown" role="external-list">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu" role="external-menu">
-              <a class="dropdown-item" href="#" id="ping">Ping IP</a>
+              <a class="dropdown-item" href="#" onclick="{alert('Papares');}">Ping IP</a>
               <a class="dropdown-item" href="#">Scan Ports</a>
             </div>
           </li>
