--- a/vibm/nomads/nomads/templates/base.html
+++ b/vibm/nomads/nomads/templates/base.html
@@ -34,8 +34,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">External</a>
             <div class="dropdown-menu" aria-labelled-by="smallerscreenmenu">
-              <a class="dropdown-item" href="#" onclick="set_external('ping_ip')">Ping IP</a>
-              <a class="dropdown-item" href="#" onclick="set_external('port_scan')">Scan Ports</a>
+              <a class="dropdown-item" href="#" id="ping-ip">Ping IP</a>
+              <a class="dropdown-item" href="#" id="scan-ports">Scan Ports</a>
             </div>
           </li>
           <!-- End of EXTERNAL -->
